<resources>
    <string name="app_name">MiPaciente</string>
    <string name="registro_doctor">Registrate</string>
    <string name="registrarse">Registrarse</string>
    <string name="modificar">Modificar</string>
    <string name="cancelar">Cancelar</string>
    <string name="clinica">MiPaciente</string>
    <string name="login">Iniciar sesión</string>
    <string name="entrar">Entrar</string>
    <string name="email">E-mail</string>
    <string name="correo">Correo electronico</string>
    <string name="telefono">Telefono</string>
    <string name="llamar">Llamar</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="direccion">Dirección</string>
    <string name="estado_civil">Estado civil</string>
    <string name="filtroTitulo">Filtro</string>
    <string name="edad">Edad</string>
    <string name="sexo">Sexo</string>
    <string name="mensaje_sin_resultados">Oops, no hay registros.</string>
    <string name="filtro">Filtrado por nombre</string>
    <string name="titulo_error_sesion">Error cerrar sesión</string>
    <string name="intentar_de_nuevo">Intentar de nuevo</string>
    <string name="salir">Salir</string>
    <string name="fecha_nacimiento">Fecha de nacimeinto</string>
    <string name="enviar_sms">Enviar SMS</string>
    <string name="red_social">Red Social</string>
    <string name="expediente">Expediente clínico</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrar_paciente">Registrar paciente</string>
    <string name="error_iniciar_sesion">Error al iniciar sesión</string>
    <string name="sin_internet">No hay internet</string>
    <string name="mensaje_desconocido">Error desconocido</string>
    <string name="historial_paciente">Historial médico</string>
    <string name="horario_citas">Horario de citas</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="alergias">Alergias</string>
    <string name="embarazo">Embarazo</string>
    <string name="extraccion_dental">Extracción dental</string>
    <string name="medicamento">Ingiere medicamento</string>
    <string name="enfermedades">Enfermedades</string>
    <string name="hospitalizado">Hospitalizado</string>
    <string name="si">Sí</string>
    <string name="no">No</string>


    <string-array name="sexo">
        <item>Seleccione su sexo</item>
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

    <string name="title_activity_inicio">Inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MiPaciente</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_log_out">Cerrar sesión</string>

    <string name="menu_home">Home</string>
    <string name="menu_pacientes">Pacientes</string>
    <string name="menu_citas">Citas</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
