<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Login">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/nombre_clinica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:textSize="25dp"
                android:fontFamily="@font/roboto"
                android:text="@string/clinica" />
            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:textSize="25dp"
                android:fontFamily="@font/roboto"
                android:text="@string/login" />


            <ImageView
                android:id="@+id/logo_clinica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Usuario">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registro_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Contraseña">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registro_contraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:columnCount="3"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_login_entrar"
                    android:layout_width="match_parent"
                    android:layout_columnSpan="2"
                    android:padding="15dp"
                    android:background="@drawable/boton_secundario"
                    android:textSize="15sp"
                    android:textColor="@color/colorTextoSecundarioBoton"
                    android:fontFamily="@font/roboto"
                    android:text="@string/entrar"></Button>


                <Button
                    android:id="@+id/btn_login_registro"
                    android:layout_width="match_parent"
                    android:padding="15dp"
                    android:textSize="15sp"
                    android:background="@drawable/boton_primario"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/colorTextoPrimarioBoton"
                    android:text="@string/registrarse"></Button>
            </GridLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>