<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:textSize="25dp"
                android:fontFamily="@font/roboto"
                android:text="@string/registrar_paciente" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Nombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/crear_cita_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Edad">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/crear_cita_fecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Red Social">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/crear_cita_social"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:columnCount="3"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancelar_registro_paciente"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_columnSpan="2"
                    android:background="@drawable/boton_secundario"
                    android:fontFamily="@font/roboto"
                    android:padding="15dp"
                    android:text="@string/cancelar"
                    android:textColor="@color/colorTextoSecundarioBoton"
                    android:layout_marginRight="40dp"
                    android:textSize="15sp"></Button>


                <Button
                    android:id="@+id/btn_guardar_registro_paciente"
                    android:layout_width="match_parent"
                    android:padding="15dp"
                    android:textSize="15sp"
                    android:background="@drawable/boton_primario"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/colorTextoPrimarioBoton"
                    android:text="@string/registrarse"></Button>

            </GridLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>